# sopds-ng

./: .dockerignore  .gitignore  License_RUS  README.md  README_RUS.md  TODO.txt  base.env  bootstrap.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  justfile  pg_service.example  pgpass.example  pyproject.toml  pytest.ini
assets/sopds-sass/: config.yml  package.json
assets/sopds-sass/js/: app.js
assets/sopds-sass/scss/: _settings.scss  (+3 more)
compose/foundation/: Dockerfile
compose/local/: Dockerfile
compose/prod/: Dockerfile
foundation/: Dockerfile
requirements/: _base.txt  local.txt
scripts/: create_key.sh  release.sh  start_server.sh
src/: manage.py
src/book_tools/: conftest.py  exceptions.py  services.py
src/opds_catalog/: admin.py  decorators.py  dl.py  feeds.py  inpx_parser.py  middleware.py  models.py  opds_paginator.py  opdsdb.py  services.py  settings.py  sopdscan.py  storage.py  urls.py  utils.py  zipf.py
src/sopds/: asgi.py  settings.py  urls.py  wsgi.py
src/sopds_web_backend/: processors.py  urls.py  views.py
tests/: conftest.py
tests/book_tools/: conftest.py  test_book_tools_services.py
tests/fixtures/: __init__.py  fixture_book_tools.py  fixture_django.py  fixture_opds_feeds.py  fixture_opds_models.py  fixture_real_book.py  fixture_settings.py  fixtures_feeds.py
tests/opds_catalog/: helpers.py  test_constance.py  test_dl.py  test_feeds.py  test_models.py  test_opdsdb.py  test_scan.py  test_services.py  test_utils.py  test_zipf.py
tests/sopds_web_backend/: smoke_test.py
(+91 files in other folders)
